# homelabster

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
config/: categories.yaml.example  ipam.yaml.example  services.yaml.example
specs/001-homelab-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-homelab-dashboard/checklists/: requirements.md
specs/001-homelab-dashboard/contracts/: api.yaml
src/: README.md  middleware.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
src/__tests__/: setup.ts
src/__tests__/components/: auth-layout.test.tsx  theme-toggle.test.tsx
src/__tests__/lib/: auth.test.ts  utils.test.ts  validation.test.ts
src/app/: layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/admin/: layout.tsx  page.tsx
src/components/: theme-provider.tsx  theme-toggle.tsx
src/components/admin/: delete-dialog.tsx  image-upload.tsx  settings-form.tsx  tile-form.tsx  tile-table.tsx
src/components/auth/: login-form.tsx
src/components/dashboard/: empty-state.tsx  (+3 more)
src/homelabster/: __init__.py  health.py  icons.py  main.py  models.py  repository.py
src/lib/: auth.ts  data.ts  storage.ts  validation.ts
src/types/: index.ts
tests/: test_app.py  test_health.py  test_icons.py  test_ipam.py  test_navigation.py  test_repository.py
userdata/config/: settings.json
(+29 files in other folders)
