[project]
name = "homelabster"
version = "0.1.0"
description = "A local-first homelab services dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.139.0",
    "httpx>=0.27,<1",
    "jinja2>=3.1,<4",
    "pydantic>=2.7,<3",
    "pyyaml>=6,<7",
    "python-multipart>=0.0.9,<1",
]

[dependency-groups]
dev = [
    "httpx2>=2,<3",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homelabster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
